--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,25 @@ h4 {
   font-weight: 900;
   font-family: "acme";
 }
+.home {
+  background-image: url("./assets//home.jpg");
+  background-repeat: no-repeat;
 
+  position: relative;
+  width: 100vw;
+  height: 100vh;
+  object-fit: cover;
+  background-size: cover;
+}
+.home::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+}
 .header {
   background-image: url("./assets/background.jpg");
   height: 100vh;
@@ -68,4 +86,28 @@ h4 {
   font-size: 20px;
   line-height: 2rem;
   font-weight: 700;
+}
+
+body::-webkit-scrollbar {
+  display: none;
+}
+
+.flex {
+  display: flex;
+}
+
+.column {
+  flex-direction: column;
+}
+
+.j-between {
+  justify-content: space-between;
+}
+
+.j-center {
+  justify-content: center;
+}
+
+.a-center {
+  align-items: center;
 }
