--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,18 @@
 @import url("https://fonts.googleapis.com/css2?family=Acme&display=swap");
 body {
   color: #fff;
-  background-color: #000;
+  background: #000;
   padding: 0;
   margin: 0;
   overflow-x: hidden;
   font-family: "Acme";
+  font-family: "acme";
 }
 p {
-  font-weight: 700;
+  font-weight: 400;
   font-size: 20px;
+  line-height: 2rem;
+  font-family: "acme";
 }
 h1,
 h2,
@@ -20,10 +23,17 @@ h4 {
   font-weight: 900;
   font-family: "acme";
 }
+.modal-img {
+  object-fit: contain;
+  width: 500px;
+}
+.modal-img img {
+  border-radius: 5px;
+}
+
 .home {
   background-image: url("./assets//home.jpg");
   background-repeat: no-repeat;
-
   position: relative;
   width: 100vw;
   height: 100vh;
