--- a/src/index.css
+++ b/src/index.css
@@ -23,31 +23,104 @@ h4 {
   font-weight: 900;
   font-family: "acme";
 }
+
+/* Modal start */
+
 .modal-img {
   object-fit: contain;
-  width: 500px;
+  width: 350px;
 }
 .modal-img img {
   border-radius: 5px;
 }
 
+.control {
+  display: flex;
+  gap: 2rem;
+  padding-bottom: 1.5rem;
+}
+.genres {
+  display: flex;
+
+  gap: 1rem;
+  text-align: left;
+}
+.flex p {
+  list-style: none;
+  gap: 1.5rem;
+}
+.text {
+  padding-top: 2.5rem;
+  /* width: 400px; */
+}
+.text h1 {
+  color: gray;
+  font-size: 30px;
+}
+.text p {
+  font-size: 20px;
+}
+
+@media screen and (max-width: 900px) {
+  .row {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .modal-img img {
+    width: 100%;
+    object-position: center;
+    margin-left: 10px;
+  }
+  .text h1 {
+    font-size: 25px;
+  }
+  .text p {
+    font-size: 15px;
+  }
+}
+@media screen and (max-width: 400px) {
+  .modal-img img {
+    width: 90%;
+    margin-left: 0;
+  }
+}
+
+@media screen and (max-width: 330px) {
+  .modal-img img {
+    width: 80%;
+  }
+  .text h1 {
+    font-size: 20px;
+  }
+  .text p {
+    font-size: 12px;
+  }
+}
+
+/* Modal End */
+
 .home {
   background-image: url("./assets//home.jpg");
   background-repeat: no-repeat;
+
   position: relative;
   width: 100vw;
   height: 100vh;
   object-fit: cover;
   background-size: cover;
+  background-position: center;
 }
 .home::before {
-  content: "";
+  /* content: "";
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.5); */
 }
 .header {
   background-image: url("./assets/background.jpg");
