--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,9 @@ body {
   padding: 0;
   margin: 0;
   overflow-x: hidden;
-  font-family: "Acme";
   font-family: "acme";
 }
+
 p {
   font-weight: 400;
   font-size: 20px;
@@ -22,6 +22,17 @@ h4 {
   line-height: 3rem;
   font-weight: 900;
   font-family: "acme";
+}
+
+@media screen and (max-width: 600px) {
+  h1,
+  h2,
+  h3,
+  h4 {
+    font-size: 1rem;
+    line-height: 3rem;
+    font-weight: 600;
+  }
 }
 
 /* Modal start */
