--- a/src/index.css
+++ b/src/index.css
@@ -76,7 +76,31 @@ h4 {
 .text p {
   font-size: 20px;
 }
-
+.play_btn {
+  margin-top: 2.5rem;
+  background: red;
+  color: #fff;
+  font-size: 20px;
+  padding: 7px;
+  font-weight: 700;
+  font-family: "acme";
+  display: flex;
+  gap: 1rem;
+  border-radius: 5px;
+  align-items: center;
+  justify-content: center;
+}
+.play_icon {
+  font-size: 25px;
+  margin-bottom: 0.3rem;
+}
+.movie {
+  position: absolute;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  right: 0;
+}
 @media screen and (max-width: 1000px) {
   .modal-img {
     padding-left: 2rem;
@@ -101,6 +125,8 @@ h4 {
   }
 }
 
+/* style={{ fontSize: "25px", marginBottom: "0.3rem" }} */
+
 @media screen and (max-width: 760px) {
   .row {
     padding-left: 5rem;
@@ -110,10 +136,20 @@ h4 {
     width: 100%;
     padding-right: 1rem;
   }
-  .text h1 {
-    font-size: 25px;
-  }
   .text p {
+    font-size: 12px;
+    line-height: 1.3rem;
+  }
+  .text h1 {
+    font-size: 20px;
+  }
+
+  .play_btn {
+    font-size: 15px;
+    padding: 5px;
+    font-weight: 500;
+  }
+  .play_icon {
     font-size: 15px;
   }
 }
@@ -235,4 +271,39 @@ body::-webkit-scrollbar {
 
 .a-center {
   align-items: center;
+}
+
+button {
+  cursor: pointer;
+  border: transparent;
+}
+
+.custom-progress-bar {
+  background-color: rgb(255, 0, 0);
+}
+
+/*  */
+
+.load {
+  width: 100%;
+  height: 100vh;
+  position: absolute;
+  background: #000;
+}
+
+.loading {
+  width: 6rem;
+  height: 6rem;
+  margin: 0 auto 2rem auto;
+  margin-top: 10rem;
+  border-radius: 50%;
+  border: 3px solid #ff0000;
+  border-top-color: #6c2626;
+  animation: spinner 0.6s linear infinite;
+}
+
+@keyframes spinner {
+  to {
+    transform: rotate(360deg);
+  }
 }
