--- a/src/index.css
+++ b/src/index.css
@@ -33,6 +33,9 @@ h4 {
     line-height: 3rem;
     font-weight: 600;
   }
+  p {
+    font-size: 12px;
+  }
 }
 
 /* Modal start */
@@ -57,6 +60,7 @@ h4 {
 }
 .genres {
   position: relative;
+  padding-bottom: 1rem;
 }
 .genre_text {
   position: absolute;
@@ -85,6 +89,7 @@ h4 {
   font-weight: 700;
   font-family: "acme";
   display: flex;
+
   gap: 1rem;
   border-radius: 5px;
   align-items: center;
