--- a/src/index.css
+++ b/src/index.css
@@ -123,7 +123,7 @@ h4 {
   }
   .text {
     position: absolute;
-    bottom: 25%;
+    bottom: 10%;
     left: 0;
     padding-left: 2rem;
     width: 80vw;
@@ -158,21 +158,26 @@ h4 {
     font-size: 15px;
   }
 }
+@media screen and (max-width: 490px) {
+  .modal-img img {
+    width: 100%;
+  }
+  .text {
+    bottom: 40%;
+  }
+}
 @media screen and (max-width: 400px) {
   .modal-img img {
     width: 100%;
   }
   .text {
-    bottom: 20%;
+    bottom: 27%;
   }
 }
 
-@media screen and (max-width: 380px) {
-  .modal-img img {
-    width: 100%;
-  }
+@media screen and (max-width: 330px) {
   .text {
-    bottom: 15%;
+    bottom: 0;
   }
   .text h1 {
     font-size: 20px;
@@ -186,7 +191,7 @@ h4 {
 /* Modal End */
 
 .home {
-  background-image: url("./assets//home.jpg");
+  /* background-image: url("./assets//home.jpg"); */
   background-repeat: no-repeat;
   position: relative;
   width: 100vw;
@@ -195,15 +200,7 @@ h4 {
   background-size: cover;
   background-position: center;
 }
-.home::before {
-  /* content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5); */
-}
+
 .header {
   background-image: url("./assets/background.jpg");
   height: 100vh;
